@@ -1273,30 +1273,6 @@ AP_DECLARE(void) ap_copy_method_list(ap_method_list_t *dest,
 }
 
 /*
- * Invoke a callback routine for each method in the specified list.
- */
-AP_DECLARE_NONSTD(void) ap_method_list_do(int (*comp) (void *urec,
-                                                       const char *mname,
-                                                       int mnum),
-                                          void *rec,
-                                          const ap_method_list_t *ml, ...)
-{
-    va_list vp;
-    va_start(vp, ml);
-    ap_method_list_vdo(comp, rec, ml, vp);
-    va_end(vp);
-}
-
-AP_DECLARE(void) ap_method_list_vdo(int (*comp) (void *mrec,
-                                                 const char *mname,
-                                                 int mnum),
-                                    void *rec, const ap_method_list_t *ml,
-                                    va_list vp)
-{
-
-}
-
-/*
  * Return true if the specified HTTP method is in the provided
  * method list.
  */
